<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".FormCadastro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:text="OLÁ!"
        android:textColor="@color/white"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crie uma nova conta"
        android:textColor="@color/white"
        android:textSize="7pt"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/edit_confirma_senha"
        style="@style/Edit_Text"
        android:hint="@string/confirma_senha"
        android:textColorHint="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCadastrar"
        style="@style/Button"
        android:hint="@string/cadastrar"
        android:textColorHint="@color/roxo"
        android:textSize="10pt"/>



</LinearLayout>